<resources>
    <string name="app_name">BookClub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="already_account">Already have an account ?</string>
    <string name="or">-or-</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="add_to_wishlist">Add to WishList</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="book_image">Book Image</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_text">⋮</string>
    <string name="delete">Delete</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="order_now">Order Now</string>
    <string name="price_details">Price Details</string>
    <string name="price">Price (#quantity items)</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total_amount">Total Amount</string>
    <string name="currency_price">#currency #price</string>
    <string name="place_order">Place Order</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="clear_all">Clear All</string>
    <string name="description">Description</string>
    <string name="create_book">Create Book</string>
    <string name="my_books">My Books</string>
    <string name="my_orders">My orders</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="type_your_address">Type your address</string>
    <string name="contact_number">Contact Number</string>
    <string name="checkout">Checkout</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="goto_cart">Goto Cart</string>
</resources>
