<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    app:cardElevation="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_price_tag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/price_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <View
            android:id="@+id/view_divider"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_price_tag"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_label_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@id/tv_label_price"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/tv_lable_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_price"
            android:text="@string/delivery_fee"
            android:layout_margin="20dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_delivery_charges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_lable_delivery"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/holo_green_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <View
            android:id="@+id/view_divider2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_lable_delivery"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_label_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/total_amount"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/view_divider2"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_label_total_amount"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:textSize="24sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
